--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Tallinna ühiskaardi miniuuring.</h1>
 <hr/>
-<b>NB! Käesolev kirjutis kajastab minu isiklikke seisukohti, täidab hariduslikke eesmärke, on koostatud avalike andmete põhjal, ei pruugi olla tõene ega korrektne, avaldatud AS-IS põhimõttel ja ei kutsu kedagi üles pättusi tegema!</b>
+<b>NB! Käesolev kirjutis kajastab minu isiklikke seisukohti, täidab hariduslikke eesmärke, on koostatud avalike andmete põhjal, ei pruugi olla tõene ega korrektne, avaldatud AS-IS põhimõttel ja ei kutsu kedagi üles <a href="https://www.riigiteataja.ee/akt/184411?leiaKehtiv#para342">pättusi tegema!</a></b>
 <hr/>
 Hüppa: <a href="#valedaator">Valedaator</a>&nbsp;|&nbsp;<a href="#validaator">validaator.py</a>&nbsp;|&nbsp;<a href="#pilet">pilet.py</a>&nbsp;|&nbsp;<a href="#abi">Kloonimise takistamine</a>
 
@@ -269,7 +269,7 @@ Allkiri EI VERIFITSEERU!
 </pre>
 <h3>Hea kloon (saab trammiga sõita)</h3>
 <p>Vaata eelmist ;)</p>
-<h2>pilet.py</h2>
+<a name="pilet"><h2>pilet.py</h2></a>
 <pre>
 $ ./py/pilet.py
 pilet.py [totalisaator|terminaator|karburaator|bingo|&lt;kaardi PAN&gt;...|&lt;kaardi nr&gt;...]
@@ -350,7 +350,7 @@ Lingid:
 		<li>Salvestab NDEF sõnumi maha.</li>
 		<li><del>Võimaldab NDEF sõnumit HiinaKaardile maha kirjutada</del> (tehniliselt võimatu :(
 		)</li>
-		<li><a href="https://github.com/OpenKMS/validaator">Githubi repo</a></li>
+		<li><a href="https://github.com/martinpaljak/Valedaator">Githubi repo</a></li>
 	</ul>
 </p>
 <p>
