--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>Tallinna ühiskaardi miniuuring.</h1>
+(<a href="https://github.com/martinpaljak/yhiskaart">Sama asi Githubis</a>)
 <hr/>
 <b>NB! Käesolev kirjutis kajastab minu isiklikke seisukohti, täidab hariduslikke eesmärke, on koostatud avalike andmete põhjal, ei pruugi olla tõene ega korrektne, avaldatud AS-IS põhimõttel ja ei kutsu kedagi üles <a href="https://www.riigiteataja.ee/akt/184411?leiaKehtiv#para342">pättusi tegema!</a></b>
 <hr/>
