--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>Tallinna ühiskaardi miniuuring.</h1>
 (<a href="https://github.com/martinpaljak/yhiskaart">Sama asi Githubis</a>)
 <hr/>
-<b>NB! Käesolev kirjutis kajastab minu isiklikke seisukohti, täidab hariduslikke eesmärke, on koostatud avalike andmete põhjal, ei pruugi olla tõene ega korrektne, avaldatud AS-IS põhimõttel ja ei kutsu kedagi üles <a href="https://www.riigiteataja.ee/akt/184411?leiaKehtiv#para342">pättusi tegema!</a></b>
+<b>NB! Käesolev kirjutis kajastab minu isiklikke seisukohti, täidab hariduslikke eesmärke, on koostatud avalike andmete põhjal, ei pruugi olla tõene ega korrektne, avaldatud AS-IS põhimõttel ja ei kutsu kedagi üles <a href="https://www.riigiteataja.ee/akt/184411?leiaKehtiv#para342">pättusi</a> <a href="https://www.riigiteataja.ee/akt/184411?leiaKehtiv#para216b1">tegema!</a></b>
 <hr/>
 Hüppa: <a href="#valedaator">Valedaator</a>&nbsp;|&nbsp;<a href="#validaator">validaator.py</a>&nbsp;|&nbsp;<a href="#pilet">pilet.py</a>&nbsp;|&nbsp;<a href="#abi">Kloonimise takistamine</a>
 
